--- a/css/style.css
+++ b/css/style.css
@@ -2,46 +2,68 @@ body {
     margin: 0;}
 a{
     text-decoration: none;}
+li{
+  list-style: none;
+}
 /*-----------HEADER-----------*/
 header{
     height:65px;
     width:100%;
-    background-color:lightgreen;
+    background-color:#112D4E;
     opacity: 0.8;
     top:0;
     z-index: 10;}
-container{
+.container{
     width:100%;
     margin: 0 auto;
-    padding:0 15px}
+    }
 .header-left {
-    float: left;
-height:65px;}
+    float: left;}
 .header-right {
     float: right;
     background-color: rgba(71, 69, 69, 0.8);
     transition: all 0.5s;}
-.header-right a{line-height:65px;
-color:white;
-display:block;
-padding: 0 25px;
+.header-right a{
+    line-height:65px;
+    color:white;
+    display:block;
+    padding: 0 25px;
 }
 .header-right:hover{
-    background-color: chocolate;
+    background-color: rgb(199, 59, 169);
 }
+.logo{
+    height:50px;
+    padding: 10px 10px;
+}
+
+.header-list{
+  position:relative;
+  margin-top:0;
+  padding-left: 800px;
+}
+
+.header-list li{
+    float:left;
+}
+.header-list a{
+  line-height:65px;
+  display:block;
+  padding: 0 25px;
+  color:white}
 /*-----------TOP SECTION-----------*/
 .top-wrapper{
-    background-image: url(../pics/pnegraffashi.jpg);
+    background-image: url(../pics/background.png) ;
     background-size: cover;
-    color:white;
+    color:black;
     padding: 180px 0 100px 0;
     text-align: center;
+    height: 400px;
 }
-.logo{width:124px;
-margin-top: 20px ;}
+
 /*-----------SECTION 1-----------*/
 .section1-wrapper{
-    background-color: rgb(221, 144, 88);
+    background-color: #112D4E;
     padding: 10px 0 10px 0; 
     text-align:center; 
     height: 500px;
@@ -49,7 +71,7 @@ margin-top: 20px ;}
 }
 .heading{ padding-top: 60px;
     padding-bottom: 30px;
-    color: #5f5d60;}
+    color: white;}
 .element{
     float:left;
     width:25%;
@@ -68,7 +90,8 @@ margin-top: 20px ;}
     border-bottom: 1px solid #eee;
     padding-bottom: 80px;
     text-align: center;
-  }
+    background-image: url(../pics/businesscard.png)
+}
   .explore {
     padding: 15px 40px;
     background-color: #5dca88;
@@ -80,8 +103,20 @@ margin-top: 20px ;}
     top: 7px;
     box-shadow: none;
   }
+  /*-----------SECTION 3-----------*/
+  .section3-wrapper {
+    border-bottom: 1px solid #eee;
+    padding-bottom: 80px;
+    text-align: center;
+    background-image: url(../pics/smart.png);
+    background-size: cover;
+    height:700px;
+}
 /*-----------BOTTOM SECTION -----------*/
   .bottom-wrapper {
+    background-image: url(../pics/pnegraffashi.jpg);
+    background-size: cover;
+    height:400px;
     border-bottom: 1px solid #eee;
     padding-bottom: 80px;
     text-align: center;
